<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dialog_title"
        android:textColor="#000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogButtonNO"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="50dp"
            android:layout_weight="0.1"
            android:padding="20dp"
            android:text="@string/dialog_no"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/dialogButtonOK"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="50dp"
            android:layout_weight="0.1"
            android:padding="20dp"
            android:text="@string/dialog_yes"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</RelativeLayout>