...
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/modeA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


...
